<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ModifyUserNameDb">

        <variable
            name="handler"
            type="com.juntian.rxjavaretrofitmvvm.fragment.user.ModifyUserNameFragment.EventHandler" />
    </data>

    <LinearLayout
        android:id="@+id/layout_name_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider"
        android:orientation="vertical">

        <com.juntian.basicapp.qmui.qmuiwidget.titlebar.TitleBar
            android:id="@+id/title_bar"
            style="@style/WhiteThemeBlackBackTitleBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_height"
            app:leftAsFinish="false"
            app:title="@string/modify_username">

        </com.juntian.basicapp.qmui.qmuiwidget.titlebar.TitleBar>


        <TextView
            style="@style/text_style_999_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/modify_username" />

        <com.juntian.basicapp.qmui.qmuiwidget.edittext.ClearEditText
            android:id="@+id/et_equipment_name"
            style="@style/text_style_333_16"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/input_user_name"
            android:imeOptions="actionGo"
            android:maxLength="20"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true" />


        <com.juntian.basicapp.qmui.qmuiwidget.roundwidget.QMUIRoundButton
            style="@style/BigButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="38dp"
            android:layout_marginRight="@dimen/dp_15"
            android:onClick="@{()->handler.save()}"
            android:text="@string/save"
            app:qmui_backgroundColor="@color/themeColor"
            app:qmui_isRadiusAdjustBounds="true" />
    </LinearLayout>
</layout>