<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="FmtLoginDb">

        <variable
            name="data"
            type="com.junzhitian.rxjavaretrofitmvvm.model.viewdata.LoginData" />

        <variable
            name="handler"
            type="com.junzhitian.rxjavaretrofitmvvm.fragment.login.LoginFragment.EventHandler" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <com.junzhitian.basicapp.qmui.qmuiwidget.titlebar.TitleBar
            android:id="@+id/title_bar"
            style="@style/WhiteThemeBlackBackTitleBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_height"
            app:title="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">


            <EditText
                android:id="@+id/et_account"
                style="@style/edit_style_phone"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:drawableLeft="@drawable/phone"
                android:hint="@string/pls_input_telphone"
                android:text="@={data.account}"></EditText>


            <View style="@style/divider_style_1dp" />


            <EditText
                android:id="@+id/et_pwd"
                style="@style/edit_style_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/pwd"
                android:hint="@string/pls_input_pwd"
                android:text="@={data.password}"></EditText>

            <View style="@style/divider_style_1dp" />

            <RelativeLayout
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dp_15">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/slt_cb"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="记住密码"
                    android:textAppearance="@style/text_style_999_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="@{()->handler.forgetPassword()}"
                    android:text="忘记密码？"
                    android:textAppearance="@style/text_style_999_14" />
            </RelativeLayout>


            <com.junzhitian.basicapp.qmui.qmuiwidget.roundwidget.QMUIRoundButton
                style="@style/BigButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="@{()->handler.login()}"
                android:text="@string/login_quick"
                app:qmui_backgroundColor="@color/themeColor"
                app:qmui_isRadiusAdjustBounds="true" />


            <LinearLayout
                style="@style/MatchWrap.Horizontal"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="还没账号？"
                    android:textAppearance="@style/text_style_999_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="@{()->handler.register()}"
                    android:text="立即注册"
                    android:textAppearance="@style/text_style_theme_15" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                style="@style/WrapWrap.Horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center_vertical">

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_color_f5f5" />

                <TextView
                    style="@style/text_style_333_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/third_login" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_color_f5f5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_666_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:drawableTop="@drawable/qq_login"
                    android:drawablePadding="11dp"
                    android:gravity="center"
                    android:onClick="@{()->handler.qqLogin()}"
                    android:text="QQ" />

                <TextView
                    style="@style/text_style_666_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="57dp"
                    android:drawableTop="@drawable/wechat_login"
                    android:drawablePadding="11dp"
                    android:gravity="center"
                    android:onClick="@{()->handler.wechatLogin()}"
                    android:text="@string/wechat" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>